--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.25",
     "core-js": "^2.6.5",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-jwt-decode": "^0.1.0",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
