--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.8.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.25",
     "core-js": "^2.6.5",
     "jwt-decode": "^2.2.0",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.4.0",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.1"
